// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-buupqx,
[data-css-buupqx] {
  height: 35px;
  overflow: hidden;
  position: relative;
  width: 35px;
}

.css-buupqx > div,
[data-css-buupqx] > div {
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.6s 0s infinite linear;
  background-image: -webkit-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: -moz-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  border-radius: 100%;
  border-width: 0px;
  height: 100%;
  position: absolute;
  width: 100%;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.6s 0s infinite linear;
}

<SemiCircleSpin
  loading={true}
>
  <div
    data-css-buupqx=""
  >
    <div />
  </div>
</SemiCircleSpin>
`;

exports[`enzyme.render 1`] = `
.css-buupqx,
[data-css-buupqx] {
  height: 35px;
  overflow: hidden;
  position: relative;
  width: 35px;
}

.css-buupqx > div,
[data-css-buupqx] > div {
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.6s 0s infinite linear;
  background-image: -webkit-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: -moz-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  border-radius: 100%;
  border-width: 0px;
  height: 100%;
  position: absolute;
  width: 100%;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.6s 0s infinite linear;
}

<div
  data-css-buupqx=""
>
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-buupqx,
[data-css-buupqx] {
  height: 35px;
  overflow: hidden;
  position: relative;
  width: 35px;
}

.css-buupqx > div,
[data-css-buupqx] > div {
  animation-fill-mode: both;
  animation: animation_1wm2cz3 0.6s 0s infinite linear;
  background-image: -webkit-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: -moz-linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  background-image: linear-gradient(transparent 0%, transparent 70%, #ffffff 30%, #ffffff 100%);
  border-radius: 100%;
  border-width: 0px;
  height: 100%;
  position: absolute;
  width: 100%;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1wm2cz3 0.6s 0s infinite linear;
}

<div
  data-css-buupqx=""
>
  <div />
</div>
`;
